examples/valid/26_module_qualified_access.lane
module Examples.Valid.ModuleQualifiedAccess

import Stdlib.Builtins

pub let answer : Int = Stdlib.Builtins.int_add(20, 22)
