examples/invalid/49_list_literal_without_list_import.lane
module Examples.Invalid.ListLiteralWithoutListImport

pub let bad : Int = [1, 2, 3, 4]
